correcting badge layout

--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -184,6 +184,7 @@
             <script>
                 snippets = $('pre code');   
                 snippets.each(function(i){hljs.highlightBlock(snippets[i]);});
+            centerOnViewport();
 
             </script>
             
