--- a/mydidata/templates/mydidata/partials/comment_list.html
+++ b/mydidata/templates/mydidata/partials/comment_list.html
@@ -28,3 +28,9 @@
 
     {%endif%}
 </div>
+{% block footer_javascript_page %}
+<script>
+    // Get the horizontal scroll position
+    // centerOnViewport();
+</script>
+{% endblock footer_javascript_page%}
