removing the ads

--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -44,7 +44,7 @@
         {% endblock head_css %}
         <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3262579547697172" -->
      <!-- crossorigin="anonymous"></script> -->
-        <!-- <script src="https://unpkg.com/htmx.org@1.8.5"></script> -->
+        <script src="https://unpkg.com/htmx.org@1.8.5"></script>
         <!-- <script data-ad-client="pub-3262579547697172" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
         <!-- <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" rel="stylesheet"> -->
     </head>
