--- a/mydidata/static/css/mydidata.css
+++ b/mydidata/static/css/mydidata.css
@@ -59,7 +59,7 @@ main {
 .overlay {
   position: fixed;
   width: 100vw;
-  height: 150vw;
+  height: 100vh;
   right: 0;
   bottom: 0;
   left: 0;
@@ -68,6 +68,7 @@ main {
   opacity: 0;
   justify-content: center;
   align-items: center;
+  display: flex;
 }
 @keyframes fadein-and-spin {
   0% { opacity: 0; transform: rotate(0deg); }
