--- a/mydidata/templates/mydidata/classroom_form.html
+++ b/mydidata/templates/mydidata/classroom_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="content-container" class="container p-none">
-  <h1>{% if classroom %}Editar{% else %}Criar{% endif %} Turma</h1>
+  <h1>{% if form.instance %}Editar{% else %}Criar{% endif %} Turma</h1>
   
   <form method="post">
     {{ form.media }}
@@ -13,7 +13,7 @@
     </table>
     <script type="text/javascript" src="{% url 'jsi18n' %}"></script>
     <div>
-    <button class="btn btn-primary" type="submit">{% if classroom %}Alterar{% else %}Criar{% endif %} Turma</button>
+    <button class="btn btn-primary" type="submit">{% if form.instance %}Alterar{% else %}Criar{% endif %} Turma</button>
     </div>
   </form>
 </div>
