--- a/mydidata/templates/mydidata/canva.html
+++ b/mydidata/templates/mydidata/canva.html
@@ -5,7 +5,7 @@
         
         
         <div>
-            <h4>Barra de Ferramentas</h4>
+            <h4>Clique na imagem, arraste e forneça feedbacks</h4>
             <!-- <button id="markButton"> Marcar </button> -->
             <span>Cor da linha: </span>
             <input type="color" name="" id="markColor">
@@ -14,7 +14,7 @@
         </div>
         <br/>
 
-        <canvas id="canvas" style= "border: 1px solid black;" width="1200" height="1900"></canvas>
+        <canvas id="canvas" style= "border: 2px solid rgb(228, 7, 7);" width="1200" height="1900"></canvas>
         {%if user.is_superuser%}
             {% with answer=form.instance%}
             <div id="answer_form">
@@ -152,7 +152,7 @@
                     
                     context.strokeRect(rect.x, rect.y, rect.width, rect.height);
                     context.fillStyle = rect.color;
-                    context.font = "12px Arial";
+                    context.font = "20px Arial";
                     context.fillText(rect.text, rect.x + 10, rect.y + 20);
                     document.getElementById("id_graphic_annotations").value = JSON.stringify(context.rectangles);
                     console.log(JSON.stringify(context.rectangles));
